Centering fixed upon opening sigPad (not responsive in real time, must close and re-open if browser window is resized while sigPad is open).

--- a/app/styles/mobile.less
+++ b/app/styles/mobile.less
@@ -191,7 +191,7 @@ footer {
 }
 /* Signature Field Styling */
 .sigWrapper {
-  width: 95%;
+  width: 100%;
   max-width: 950px;
   max-height: 620px;
   position: absolute;
@@ -255,9 +255,11 @@ footer {
   position:absolute;
   top:0; left:0;
   width:100%;
+  height: 100%;
   z-index:-1;
   opacity: 0;
   visibility: hidden;
+  overflow: visible;
 }
 #taskStatuses {
   width: 80%;
